error/20200003/25_error.txt
/home/kps/ssu_score/ssu_score/STD_DIR/20200003/25.c: In function ‘main’:
/home/kps/ssu_score/ssu_score/STD_DIR/20200003/25.c:38:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/kps/ssu_score/ssu_score/STD_DIR/20200003/25.c:38:1: error: expected declaration or statement at end of input
